--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ apply plugin: 'antlr'
 dependencies {
 	compile 'org.antlr:antlr4-runtime:4.5.1'
 	compile 'org.antlr:antlr4-jetbrains-adapter:1.0.0'
+	compile 'com.fredun:frontend:0.0.1-SNAPSHOT'
 	antlr 'org.antlr:antlr4:4.5.1'
 }
 
